--- a/main.html
+++ b/main.html
@@ -4,12 +4,86 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        form {
+            max-width: 600px;
+            margin: auto;
+        }
+        label {
+            display: block;
+            margin-top: 10px;
+        }
+        input, select {
+            width: 100%;
+            padding: 8px;
+            margin-top: 5px;
+        }
+        button {
+            display: block;
+            margin-top: 20px;
+            padding: 10px 15px;
+            background-color: #2c3e50;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #34495e;
+        }
+    </style>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <!-- <script type="text/javascript" src="./script.js">
+</script> -->
+
+	<form action="#" method="POST">
+		<label for="name">Name</label>
+		<input type="text" id="name" required>
+
+		<label for="email">Email</label>
+		<input type="email" id="email" required>
+
+		<label for="gender_male">
+			<input type="radio" id="gender_male" value="male" required>Male
+		</label>
+		
+		<label for="gender_female">
+			<input type="radio" id="gender_female" value="female" required>Female
+		</label>
+		
+		<label for="gender_other">
+			<input type="radio" id="gender_other" value="other" required>Other 
+		</label>
+
+		<label for="laptop">Preferred Laptop Brand</label>
+		<select id="laptop" name="laptop">
+			<option value="apple">Apple</option>
+			<option value="asus">Asus</option>
+			<option value="hp">HP</option>
+		</select>
+
+		<label for="age">Age</label>
+			<input type="number" id="age" required>
+        <input type="number" id="age" name="age" required>
+
+        <label for="dob">Date of Birth *</label>
+        <input type="date" id="dob" name="dob" required>
+
+        <label for="password">Password *</label>
+        <input type="password" id="password" name="password" required>
+
+        <label for="portfolio">Portfolio URL</label>
+        <input type="url" id="portfolio" name="portfolio">
+
+        <button type="submit">Submit</button>
+    </form>
+		
 
 </body>
 
